css correction to center expanded menu options on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@ main {
 }
 
 
-.container {
+.about-me {
   text-align: left;
 }
 
